--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container">
         <div class="left">
             <div class="youtube-container">
-                <iframe src="https://www.youtube.com/embed/6LaI_GUgKU8" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/F5oluJAoXCI" allowfullscreen></iframe>
             </div>
         </div>
         <div class="right">
@@ -103,11 +103,11 @@
             </div>
             <div class="looker-container">
                 <div class="looker-title">Dashboard 2</div>
-                <iframe src="YOUR_LOOKER_LINK"></iframe>
+                <iframe src="https://lookerstudio.google.com/u/0/reporting/37f35bed-8ca3-44fd-9a88-4ef8d222d5db/page/p_l9p9j946od"></iframe>
             </div>
             <div class="looker-container">
                 <div class="looker-title">Dashboard 3</div>
-                <iframe src="YOUR_LOOKER_LINK"></iframe>
+                <iframe src="https://lookerstudio.google.com/u/0/reporting/37f35bed-8ca3-44fd-9a88-4ef8d222d5db/page/p_lpizw7b8od"></iframe>
             </div>
             <div class="looker-container">
                 <div class="looker-title">Dashboard 4</div>
