--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
             <div class="looker-container">
                 <div class="looker-title">Dashboard 5-รายได้ธุรกิจเกี่ยวเนื่อง 7 ประเภท</div>
-                <iframe src="YOUR_LOOKER_LINK"></iframe>
+                <iframe src="https://lookerstudio.google.com/embed/reporting/37f35bed-8ca3-44fd-9a88-4ef8d222d5db/page/p_u7pdbqq3od"></iframe>
             </div>
         </div>
         
@@ -177,11 +177,11 @@
             <div class="side-link-container">
                 <div class="side-link-item">
                     <iframe src="https://test-alert2.vercel.app/" title="test"></iframe>
-                    <a href="https://example.com" target="_blank">ฝังลิงก์ที่ 1</a>
+                    <a href="https://example.com" target="_blank"></a>Test</a>
                 </div>
                 <div class="side-link-item">
                     <iframe src="https://faketime-virid.vercel.app/" title="time"></iframe>
-                    <a href="https://example2.com" target="_blank">ฝังลิงก์ที่ 2</a>
+                    <a href="https://example2.com" target="_blank">Time</a>
                 </div>
             </div>
         </div>
